# CameraLed

./: .gitignore  CMakeLists.txt  CtrlLed.kdev4  README.md
.kdev4/: CtrlLed.kdev4
doc/: client.sh
src/server/: CMakeLists.txt
src/server/include/: Camera.h  Cmd.h  FindFifo.h  ManageCmd.h  OperateFifo.h  cmdGetClr.h  cmdGetRate.h  cmdGetState.h  cmdSetClr.h  cmdSetRate.h  cmdSetState.h  define.h
src/server/src/: Camera.cpp  Cmd.cpp  FindFifo.cpp  ManageCmd.cpp  OperateFifo.cpp  cmdGetClr.cpp  cmdGetRate.cpp  cmdGetState.cpp  cmdSetClr.cpp  cmdSetRate.cpp  cmdSetState.cpp  main.cpp
